# mark-x

./: .gitignore  CMakeLists.txt  README.md  data.json  install.sh  main.c  script.c  setup-project-bash.sh  setup-project-zsh.sh  tt
mark_js/: mark.js  mu.js  package-lock.json  package.json  script.js
mark_xi/: script.c  setup.sh
mark_xi/skeletons/express-csr/: .env  app.js  package-lock.json  package.json
mark_xi/skeletons/express-csr/config/: appConfig.js  (+1 more)
mark_xi/skeletons/express-ssr/: app.js  package.json
mark_xi/skeletons/spring-csr/: pom.xml
mark_xi/skeletons/spring-ssr/: pom.xml
mark_xi/structs/: attribute.h  config_info.h  model.h  project.h
mark_xi/templates/dotnet-csr-templates/: Controller.tt  Model.tt  dotnet-csr.conf  repositories.tt
mark_xi/templates/dotnet-ssr-templates/: Model.tt  Service.tt  View.tt  dotnet-ssr.conf  views.tt
mark_xi/templates/express-csr-templates/: Controller.tt  Model.tt  Route.tt  express-csr.conf
mark_xi/templates/express-ssr-templates/: Controller.tt  Model.tt  View.tt  express-ssr.conf  routes.tt
mark_xi/templates/spring-csr-templates/: Controller.tt  Model.tt  Service.tt  spring-csr.conf
mark_xi/templates/spring-ssr-templates/: Controller.tt  Repository.tt  Service.tt  Template.tt  services.tt  spring-ssr.conf
mark_xi/utils/: utils.c  utils.h
scripts/: create-mark  mark.js  mu.js  setup.sh
skeletons/dotnet-csr/: dotnet-csr.csproj  dotnet-csr.http
skeletons/dotnet-csr/Properties/: launchSettings.json
skeletons/dotnet-ssr/Properties/: launchSettings.json
skeletons/express-csr/: app.js  package.json
skeletons/express-ssr/: package.json
skeletons/lit/: package.json
skeletons/preact/: package.json
skeletons/qwik/: package.json
skeletons/solid/: package.json
skeletons/svelte/: package.json
skeletons/vanilla/: package.json
skeletons/vue/: package.json
structs/: attribute.h  config_info.h  model.h  project.h
templates/dotnet-ssr-templates/: Controller.tt  Repository.tt
templates/express-csr-templates/: Model.tt  express-csr.conf
templates/express-ssr-templates/: Route.tt
templates/spring-csr-templates/: Controller.tt  Model.tt  Repository.tt  spring-csr.conf
templates/spring-ssr-templates/: Model.tt  Repository.tt  Service.tt  spring-ssr.conf
utils/: utils.c  utils.h
(+32 files in other folders)
