cmake_minimum_required(VERSION 3.28)
project(mark_x C)

set(CMAKE_C_STANDARD 11)

add_executable(mark script.c utils/utils.c)
target_link_libraries(mark -ljansson)
target_link_libraries(mark -lconfig)

install(TARGETS mark DESTINATION bin)
install(FILES scripts/create-mark DESTINATION bin PERMISSIONS WORLD_EXECUTE WORLD_READ WORLD_WRITE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_READ GROUP_EXECUTE GROUP_WRITE)
install(FILES scripts/setup.sh DESTINATION bin/mark_xi PERMISSIONS WORLD_EXECUTE WORLD_READ WORLD_WRITE OWNER_READ OWNER_EXECUTE OWNER_WRITE GROUP_READ GROUP_EXECUTE GROUP_WRITE)
install(FILES scripts/mu.js DESTINATION bin/mark_xi PERMISSIONS WORLD_EXECUTE WORLD_READ OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE)
install(FILES scripts/mark.js DESTINATION bin/mark_xi PERMISSIONS WORLD_EXECUTE WORLD_READ OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE)
install(DIRECTORY skeletons DESTINATION bin/mark_xi)
install(DIRECTORY templates DESTINATION bin/mark_xi)

